update social links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 
         <a href="https://www.linkedin.com/in/islamkaya" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/islamkaya" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://twitter.com/vinlyobscura" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.instagram.com/kayaaislamm/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 
       </div>
@@ -268,8 +267,7 @@
     <div class="container">
       
       <div class="social-links">
-        <a href="https://twitter.com/vinlyobscura" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/Adieulieth/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://github.com/islamkaya" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/kayaaislamm/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/islam-kaya-621a71119/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
